# wayland-server-delegate

./: .editorconfig  iwaylandclientcontext.h  iwaylandserver.h  license.txt  readme.md  waylandresource.h
cmake/: CMakeLists.txt  FindWayland.cmake  wayland-server-delegate-config.cmake
source/: bufferdelegate.cpp  bufferdelegate.h  callbackdelegate.cpp  callbackdelegate.h  dmabufferdelegate.cpp  dmabufferdelegate.h  regiondelegate.cpp  regiondelegate.h  registrydelegate.cpp  registrydelegate.h  seatdelegates.cpp  seatdelegates.h  sharedmemorypooldelegate.cpp  sharedmemorypooldelegate.h  surfacedelegate.cpp  surfacedelegate.h  waylandresource.cpp  waylandserver.cpp  waylandserver.h  xdgsurfacedelegate.cpp  xdgsurfacedelegate.h
